<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/titleAccount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dp"
        android:fontFamily="Asap-Regular"
        android:layout_marginTop="43dp"
        android:textColor="#06bebd"
        android:textSize="44sp"
        android:textAlignment="center"
        android:text="My Profile" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/person_icon" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:textAlignment="center"
        android:padding="5dp"
        >

        <TextView
            android:id="@+id/textView_firstname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="First Name goes here"
            android:gravity="center_horizontal"
            android:textSize="25sp"
            android:textColor="#445677"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="lastname goes here"
            android:id="@+id/textView_lastname"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textColor="#445677"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="email goes here"
            android:id="@+id/textView_email"
            android:textAlignment="center"
            android:textSize="22sp"
            android:textColor="#445677"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="15dp"
            />

    </LinearLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:padding="20dp">

        <TableRow
            android:layout_marginBottom="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:text="Username:"
                android:textColor="#445677"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/textView_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:inputType="none"
                android:text="Username"
                android:textColor="#445677"
                android:textSize="17sp" />

            <Button
                android:id="@+id/btn_edit_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Edit"
                android:textSize="25sp"
                android:textColor="#ffffff"
                android:textAllCaps="false"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:background="@drawable/roundedbtn"/>

        </TableRow>

        <TableRow
            android:layout_marginTop="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Phone Number:"
                android:textSize="20sp"
                android:textColor="#445677"
                />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="###"
                android:id="@+id/textView_phonenumber"
                android:inputType="none"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:textSize="17sp"
                android:textColor="#445677"
                />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Edit"
                android:id="@+id/btn_edit_phonenumber"
                android:textSize="20sp"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:textColor="#ffffff"
                android:textAllCaps="false"
                android:background="@drawable/roundedbtn"
                />

        </TableRow>

    </TableLayout>

</LinearLayout>