<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_navigation_jobprovider"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context="com.oreo.mcommonjobs.Activity.NavigationActivityForJobSeeker">

    <LinearLayout
...
                    android:weightSum="2"
                    android:orientation="horizontal"
                    android:gravity="center_horizontal">

                    <Button
                        android:text="@string/view_account_details"
                        android:id="@+id/btn_account"
                        android:layout_width="40dp"
                        android:layout_weight="1"
                        android:layout_height="match_parent"
                        android:background="@drawable/btn_square_menu"
                        android:textColor="#06bebd"
                        />
...
