<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <TextView
        android:id="@+id/ViewJobsTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:fontFamily="Asap-Regular"
        android:text="@string/available_jobs"
        android:textAlignment="center"
        android:textColor="#06bebd"
        android:textSize="44sp" />

    <ListView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ViewJobsTitle"
        android:id="@+id/joblist">

    </ListView>


</RelativeLayout>